beforelecture
